--- a/composer.json
+++ b/composer.json
@@ -7,11 +7,21 @@
             "name": "Thanos Smith"
         }
     ],
-    "require": {},
+    "require": {
+        "illuminate/collections": "^8.83"
+    },
     "autoload":{
       "psr-4":{
         "Core\\":"Core/",
         "Http\\":"Http/"
       }
+    },
+    "require-dev": {
+        "pestphp/pest": "^1.23"
+    },
+    "config": {
+        "allow-plugins": {
+            "pestphp/pest-plugin": true
+        }
     }
 }
